@@ -6,6 +6,7 @@
 - Fixed memory leak in NXSL functions gmtime and localtime
 - Java console:
 	- Added object status indication bar in object browser
+	- Added filtering by IP address and comments in object browser
 
 
 *
